# django

./: .env.example  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  PROJECT_REVIEW.md  README.MD  TUZATISHLAR_XULOSASI.md  ViteDockerfile  cookiecutter.json  docker-compose.yml  generate_secret.py  git.diff  install.py  jst.py  manage.py  mypy.ini  pyproject.toml  qodana.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/:  notify.yml  deploy.yml
common/: env.py
config/: __init__.py  asgi.py  celery.py  env.py  wsgi.py
config/conf/: __init__.py  apps.py  cache.py  ckeditor.py  jazzmin.py  jwt.py  logs.py  navigation.py  rest_framework.py  spectacular.py  unfold.py  websocket.py
config/settings/: __init__.py  common.py  local.py  production.py
core/console/: __init__.py
core/enums/: core.py
core/exceptions/: __init__.py  core.py
core/http/: __init__.py  admin.py  models.py
deployments/: docker-compose.yml
examples/: docker-compose.yml  pytest.ini
hooks/: post_gen_project.py  pre_gen_project.py  pre_prompt.py
nginx/: Dockerfile  default.conf
requirements/: common.txt  local.txt
routes/: __init__.py  common.py  local.py  production.py  swagger.py
scripts/: celery.sh  entrypoint.sh  node.sh  tw.sh
tests/: auth_test.py  exceptions_test.py  test_example.py  utils_test.py
{{cookiecutter.project_slug}}/: .dockerignore  .env.example  .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  Jenkinsfile  Makefile  README.EN.md  README.MD  SECURITY.md  backup.sh  config.json  cookiecutter.json  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  jst.json  manage.py  mypy.ini  pyproject.toml  requirements.txt  stack.j2.yaml  stack.yaml
{{cookiecutter.project_slug}}/core/http/: README.md  __init__.py  pyproject.toml
{{cookiecutter.project_slug}}/core/http/admin/: __init__.py  another.py  core.py  user.py
{{cookiecutter.project_slug}}/core/http/database/seeder/: core.py
{{cookiecutter.project_slug}}/core/http/exceptions/: core.py
{{cookiecutter.project_slug}}/core/http/jst_django_core/: apps.py
{{cookiecutter.project_slug}}/core/http/jst_django_core/exceptions/: core.py
{{cookiecutter.project_slug}}/core/http/jst_django_core/models/: user.py
{{cookiecutter.project_slug}}/core/http/jst_django_core/seeder/: core.py
{{cookiecutter.project_slug}}/core/http/jst_django_core/tasks/: sms.py
{{cookiecutter.project_slug}}/core/http/jst_django_core/templatetags/: vite.py
{{cookiecutter.project_slug}}/core/http/jst_django_core/views/: __init__.py
{{cookiecutter.project_slug}}/core/http/managers/: user.py
{{cookiecutter.project_slug}}/core/http/middlewares/: __init__.py  cache.py  exception.py
{{cookiecutter.project_slug}}/core/http/migrations/: 0001_initial.py  0003_comment_created_at_comment_updated_at_and_more.py
{{cookiecutter.project_slug}}/core/http/models/: __init__.py  another.py  user.py
{{cookiecutter.project_slug}}/core/http/paginations/: default.py
{{cookiecutter.project_slug}}/core/http/seeder/: core.py
{{cookiecutter.project_slug}}/core/http/serializers/: __init__.py  auth.py  user.py
{{cookiecutter.project_slug}}/core/http/tasks/: sms.py
{{cookiecutter.project_slug}}/core/http/templatetags/: vite.py
{{cookiecutter.project_slug}}/core/http/views/: __init__.py  auth.py  dashboard.py  generics.py
(+275 files in other folders)
